# KhuCv

./: ChildFrame.cpp  ChildFrame.h  ClientView.cpp  ClientView.h  KhuCvApp.cpp  KhuCvApp.h  KhuCvApp.vcxproj  KhuCvApp.vcxproj.filters  MainDialog.cpp  MainDialog.h  MainFrame.cpp  MainFrame.h  Project.cpp  Project.h  README.md
02_Style_transfer_opencv/: Project.cpp  README.md
03_Mnist_classification_ort/: Project.cpp  Project.h  README.md
KhuCvApp/: ChildFrame.cpp  ChildFrame.h  ClientView.cpp  ClientView.h  KhuCvApp.cpp  KhuCvApp.h  KhuCvApp.vcxproj  Logo.h  MainDialog.cpp  MainDialog.h  MainFrame.cpp  MainFrame.h  Project.cpp  Project.h
Samples/01_Face_detection_opencv/: Project.cpp  Project.h  README.md
Samples/02_Style_transfer_opencv/: Project.h
Samples/Style_transfer/: Project.cpp  Project.h
build-linux/: CMakeLists.txt
build-mac/: CMakeLists.txt
build-windows/: CMakeLists.txt  CMakeLists_wx3.1.6.txt
